// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home View matches the snapshot when error 1`] = `
<DocumentFragment>
  <header
    class="w-full h-12 flex items-center p-2 md:hidden justify-between"
  >
    <button
      class="w-11 float-left"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-arrow-left fa-w-14 m-1 text-lg"
        data-icon="arrow-left"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z"
          fill="currentColor"
        />
      </svg>
    </button>
    <h1
      class="mx-2 font-medium text-lg overflow-x-auto whitespace-nowrap"
    >
      Error
    </h1>
    <div
      class="w-11"
    />
  </header>
  <div
    class="px-2 py-2.5 bg-red-400 bg-opacity-50 border border-solid border-red-400 p-2.5"
  >
    <div
      class="flex flex-col items-center justify-center"
    >
      <img
        alt="Frustrated Illustration"
        class="opacity-80 mb-2.5"
        src="/frustrated.png"
        width="80"
      />
    </div>
    <h2
      class="font-bold"
    >
      Error
    </h2>
    <p>
      Generic error
    </p>
  </div>
</DocumentFragment>
`;

exports[`Home View matches the snapshot when loaded with data 1`] = `
<DocumentFragment>
  <div
    class="pb-4"
  >
    <a
      class="float-right"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 m-3 text-xl"
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <h2
    class="ml-2 text-xl font-bold"
  >
    Airing Next
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  >
    <a
      class="inline-block w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6 p-1"
      href="/episode/14308"
    >
      <div
        class="h-0 relative rounded-sm"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full bg-gray-800"
        />
        <img
          alt="Rick and Morty"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/1/3603.jpg"
        />
      </div>
      <div
        class="h-18"
      >
        <span
          class="block whitespace-nowrap overflow-hidden overflow-ellipsis font-bold mt-1"
        >
          Rick and Morty
        </span>
        <span
          class="block"
        >
          S01E01
        </span>
        <time
          class="block"
          datetime="2013-12-03T03:30:00.000Z"
        >
          7 years ago
        </time>
      </div>
    </a>
  </div>
  <h2
    class="ml-2 text-xl font-bold md:mt-8"
  >
    Aired Recently
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  >
    <a
      class="inline-block w-1/3 sm:w-1/4 md:w-1/5 lg:w-1/6 p-1"
      href="/episode/14308"
    >
      <div
        class="h-0 relative rounded-sm"
        style="padding-top: 140.47619047619045%;"
      >
        <div
          class="animate-pulse bg-gray-700 absolute top-0 left-0 w-full h-full bg-gray-800"
        />
        <img
          alt="Rick and Morty"
          class="absolute top-0 left-0 w-full h-full hidden"
          src="undefined/uploads/images/medium_portrait/1/3603.jpg"
        />
      </div>
      <div
        class="h-18"
      >
        <span
          class="block whitespace-nowrap overflow-hidden overflow-ellipsis font-bold mt-1"
        >
          Rick and Morty
        </span>
        <span
          class="block"
        >
          S01E01
        </span>
        <time
          class="block"
          datetime="2013-12-03T03:30:00.000Z"
        >
          7 years ago
        </time>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`Home View matches the snapshot when loaded with no data 1`] = `
<DocumentFragment>
  <div
    class="pb-4"
  >
    <a
      class="float-right"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 m-3 text-xl"
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <h2
    class="ml-2 text-xl font-bold"
  >
    Airing Next
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  />
  <h2
    class="ml-2 text-xl font-bold md:mt-8"
  >
    Aired Recently
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  />
</DocumentFragment>
`;

exports[`Home View matches the snapshot when loading 1`] = `
<DocumentFragment>
  <div
    class="pb-4"
  >
    <a
      class="float-right"
      href="/settings"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-cog fa-w-16 m-3 text-xl"
        data-icon="cog"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"
          fill="currentColor"
        />
      </svg>
    </a>
  </div>
  <h2
    class="ml-2 text-xl font-bold"
  >
    Airing Next
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  >
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
  </div>
  <h2
    class="ml-2 text-xl font-bold md:mt-8"
  >
    Aired Recently
  </h2>
  <div
    class="w-full overflow-x-auto whitespace-nowrap px-1"
  >
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
    <div
      class="inline-block w-1/3 p-1"
    >
      <div
        class="animate-pulse bg-gray-700 w-full h-0 relative bg-gray-600 rounded-sm"
        style="padding-top: 140.47619047619045%;"
      />
      <div
        class="animate-pulse bg-gray-700 h-18 bg-gray-800"
      />
    </div>
  </div>
</DocumentFragment>
`;
